[package]
name = "agi-pic-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
eframe = "0.20.1"
egui = "0.20.1"
imgui = "0.9.0"
thiserror = "1.0.38"

# MiniFb version, very slow
#minifb = "0.23.0"
#raqote = { version = "0.8.1", features = [ "text" ] }
#font-kit = "0.10"
